Opened 7 years ago
Closed 7 years ago
#14149 closed bug (fixed)
Automount notification not working
Reported by: | vidrep | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Servers/mount_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev51942 x86_gcc2h, fresh install
When a USB stick is inserted, there is no longer a dialog to mount read/write, read only. The default settings are correct - Tracker preferences->Disk mount->Automatic disk mounting->All disks
This commit appears to be the culprit: https://git.haiku-os.org/haiku/commit/?id=ae47dec0fd1a4a9d917f1c8642e7554f74ccd1e8
Installing an earlier hrev works OK
Attachments (2)
Change History (13)
comment:1 by , 7 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 7 years ago
comment:3 by , 7 years ago
To reproduce:
unmount /Haiku32 launch_roster restart x-vnd.haiku-mount_server
comment:4 by , 7 years ago
Summary: | Automount not working → Automount notification not working |
---|
comment:5 by , 7 years ago
I may not have been clear enough in my original description. Prior to hrev51932, there was a notification when inserting a USB stick, that allowed the user to select "Mount read/write" or "Read only". This is no longer working. See attached screenshot of the notification.
by , 7 years ago
Attachment: | screenshot1.png added |
---|
comment:8 by , 7 years ago
Milestone: | Unscheduled → R1/beta1 |
---|
sigh. When do we branch beta so people stop putting regressions in it, again?
comment:9 by , 7 years ago
The previous screenshot was for a non-BFS volume. I have attached the notification we used to get for BFS.
by , 7 years ago
Attachment: | screenshot2.png added |
---|
comment:10 by , 7 years ago
This restores the mount notification: https://review.haiku-os.org/#/c/haiku/+/279
When I unmount one of my BFS partitions and reboot all of them are mounted again.