mount_server: restore automount notification.

Fix #14149.